# compiler

./: .gitignore  CMakeLists.txt  README.md  a.out
src/: config.cpp  config.hpp  main.cpp
src/IR/: ir.cpp  ir.hpp
src/IR/generate/: context.cpp  context.hpp  eval.cpp  generate.cpp  generate.hpp  irGEN.cpp
src/IR/optimizer/: optimize.cpp  optimize.hpp  passes.hpp
src/IR/optimizer/passes/: undocode.cpp  undocode.hpp  unreachablecode.cpp  unreachablecode.hpp
src/asm/generate/: context.cpp  context.hpp  generate.cpp  generate.hpp
src/ast/: node.cpp  node.hpp
src/ast/generate/: generate.cpp  generate.hpp
src/error/: error.cpp  error.hpp
src/parser/: lexer.l  parser.y
